# flashcards_ai_obsidian_pro

./: .gitignore  pyproject.toml  ruff.toml
.env/: .env-pytest.default  .gitignore
app/: custom_logger.py  logging_setup.py  main.py
app/.logging_configs/: base_config.json  config.toml
app/ai/: card_gen.py
app/ai/prompts/: system_prompt.txt
app/models/: flashcard_models.py  note_models.py
app/notes_reader/: notes_loader.py  notes_loader_abc.py
app/tools/: auto_repr.py  open_file.py
obsidian_vault/: Coverage.md  Docker.md  Pytest fixtures.md  Pytest plugins.md  Pytest.md
tests/models/: test_note_models.py
tests/notes_reader/: test_notes_loader.py
